# Solaris

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
s4/: __init__.py  __main__.py  config.py
s4/bot/: bot.py
s4/bot/cogs/: error.py  gateway.py  help.py  hub.py  meta.py  mod.py  modules.py  system.py
s4/data/static/: build.sql  embeds.json  help.json  messages.json
s4/db/: __init__.py  db.py
s4/utils/: __init__.py  checks.py  chron.py  converter.py  converters.py  embed.py  emoji.py  loc.py  menu.py  message.py  presence.py  ready.py  search.py  string.py  trips.py
s4/utils/menu/: __init__.py  menus.py  selectors.py
s4/utils/modules/: __init__.py  activate.py  config.py  deactivate.py  retrieve.py
solaris/: __init__.py  __main__.py  config.py
solaris/bot/: __init__.py  bot.py
solaris/bot/cogs/: error.py  gateway.py  help.py  hub.py  meta.py  mod.py  modules.py  system.py  tags.py  warn.py
solaris/data/static/: build.sql
solaris/db/: __init__.py  db.py
solaris/utils/: __init__.py  checks.py  chron.py  converters.py  embed.py  emoji.py  loc.py  presence.py  ready.py  search.py  string.py  trips.py
solaris/utils/menu/: __init__.py  menus.py  selectors.py
solaris/utils/modules/: __init__.py  activate.py  config.py  deactivate.py  retrieve.py
